<resources>
    <string name="app_name">My Covid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">MyTrace</string>
    <string name="menu_nav_list">Traces</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_register">Register</string>
    <string name="menu_nav_traceRegister">TraceRegister</string>
</resources>